--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     </section>
     <section id="contact">
       <div class="social-icons">
-        <i class="fab fa-github"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-telegram-plane"></i>
+        <a href="https://github.com/NorvellArt" class="fab fa-github" target="_blank"></a>
+        <a href="https://instagram.com/norvellart/" class="fab fa-instagram" target="_blank"></a>
+        <a href="https://t.me/norvellart" class="fab fa-telegram-plane" target="_blank"></a>
       </div>
     </section>
     <!-- Script -->
